prevent date from wrapping on feed items

--- a/assets/css/_feed.styl
+++ b/assets/css/_feed.styl
@@ -45,6 +45,8 @@
   > span
     margin:0 4px
     color:hsl(0, 0%, 55%)
+    white-space: nowrap
+    
   > address
     color:intel-grey
     display:inline
